--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,5 @@
 <!-- params = house_web, food_webs, weather_webs -->
-{% extends 'layout.html' %} {% block content %} {% include 'searchform.html' %}
+{% extends 'layout.html' %}     {% block content %}
+    <p>You can search for housing, recipe, and weather.</p>
+    {% include 'searchform.html' %}
 {% endblock %}
