--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,11 @@
 <!-- params = house_web, food_webs, weather_webs -->
 {% extends 'layout.html' %}     
 
-{% include "nav.html" %}
+{% include "nav.html"%}
 
 {% block content %}
+    {% include "header.html" %}
+    <p> Hello, {{user.firstname}} </p>
     <p>You can search for housing, recipe, and weather.</p>
-    {% include 'searchform.html' %}
-{% endblock %}
+    {% include 'searchform.html' %} 
+{% endblock %}     vbg           
