--- a/static/css/index.css
+++ b/static/css/index.css
@@ -23,7 +23,7 @@ body {
   margin: 4px
 }
 
-nav {
+#navigation {
   display: flex;
   flex-direction: row;
   justify-content: end;
@@ -31,11 +31,17 @@ nav {
   position: fixed;
   top: 10px;
 }
-
-nav a {
+.nav-column {
+  width: 40px;
+  margin: 0px 15px;
+  align-items: center;
+}
+.nav-column a {
   text-decoration: none;
   color: #7b7bff;
-  margin: 0px 10px;
+}
+.nav-column img{
+  width: 15px
 }
 
 table{
@@ -156,6 +162,16 @@ th,td{
   margin: 5px;
 }
 
-.auth-form-cont a {
-  text-align: center;
+.auth-form_other-link{
+  align-items: center;
+
+}
+.auth-form_other-link img {
+  width: 25px;
+ 
+}
+
+.auth-form_other-link a{
+    color: #7b7bff;
+    text-decoration: none;
 }
