--- a/templates/auth.html
+++ b/templates/auth.html
@@ -1,71 +1,16 @@
-{% extends "layout.html" %}
-{% macro buildInput(field) %}
-    <div class = "flex-column form-input-cont">
-      <label>
-        {{field.label.text}}
-      </label>
-      {{ field(size=20, class = "form-input auth-form-input")}}
-    </div>
-{% endmacro %}
+{% extends "layout.html" %} {% import "form.jinja2" as form_macro %} {% block
+content%} {% include "header.html" %}
 
-{% block content%}
-{% include "header.html" %}
 <div class="flex-column auth-form-cont">
-  <form
-    action = "/{{form_for}}"
-    method = "POST"
-    class="flex-column auth-form {{form_for}}-form"
-  >
-    {{form.csrf_token}} 
-
-    <!-- Register -->
-    {% if form_for == "register" %}
-      {{buildInput(form.firstname)}}
-      {{buildInput(form.lastname)}}
-    {% else %}
-      {% with err_msg = get_flashed_messages()[0] %}
-        <span class="warning-msg">
-          {{err_msg}}
-        </span>
-      {% endwith %}
-    {% endif %}
-
-      {{buildInput(form.username)}}
-      {{buildInput(form.password)}}
-      
-      <!-- Register -->
-      {% if form_for == "register" %}
-      {{buildInput(form.password_confirm)}}
-      {% endif %}
-
-
-      {% if form.username.errors %}
-        <div class="warning-msg">  
-          {% for error in form.username.errors %}
-            <span>{{ error }}</span>
-          {% endfor %}
-        </div>
-      {% endif %}
-
-      {% if form.password.errors %}
-        <div class="warning-msg">  
-          {% for error in form.password.errors %}
-            <span>{{ error }}</span>
-          {% endfor %}
-        </div>
-      {% endif %}
-      {{form.submit(class ="form-btn auth-form-btn")}}
-  </form>
+  {{form_macro.build_form(form)}}
 
   {% with other_form = "register" if form_for == "login" else "login" %}
 
-  <div class = "flex-column auth-form_other-link">
-    <img src = "../static/imgs/{{other_form}}.png"/>
+  <div class="flex-column auth-form_other-link">
+    <img src="../static/imgs/{{other_form}}.png" />
     <a href="/{{other_form}}"> {{other_form}} </a>
   </div>
 
-  
   {% endwith %}
-
 </div>
 {% endblock %}
