--- a/static/css/error.css
+++ b/static/css/error.css
@@ -1,14 +1,11 @@
 .err-cont {
   position: absolute;
-  width: 300px;
-  top: 50px;
-  left: -300px;
-  background: #c00;
-  display: flex;
-  justify-content: left;
   padding: 20px;
-  gap: 10px;
-  align-items: center;
-  border-radius: 0.5rem;
-  transition: all 0.8s;
+  top: 103%;
+  left: -17%;
+}
+
+.alert-danger {
+  min-width: 300px;
+  text-align: center;
 }
